# poly

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  nppoly.py  objects.inv  poly.py  pyproject.toml  setup.py  sitemap.xml
docs/: functional.md  hermite.md  hermite_functional.md  index.md  sparse.md  standard.md
functional/: index.html
hermite/: index.html
hermite_functional/: index.html
poly/: __init__.py  _hermfunctions.py  _hermnumpy.py  _polyclass.py  _polyfunctions.py  _polynumpy.py  functional.py  hermite_functional.py  polyfunctions.py  polynumpy.py
poly/hermite/: __init__.py  arithmetic.py  calculus.py  conversion.py  core.py  creation.py  evaluation.py  hilbert_space.py  utility.py  vector_space.py
poly/sparse/: __init__.py  arithmetic.py  calculus.py  conversion.py  creation.py  evaluation.py  utility.py
poly/standard/: __init__.py  arithmetic.py  calculus.py  conversion.py  creation.py  evaluation.py  utility.py
sparse/: index.html
standard/: index.html
tests/: test_functional.py  test_hermfunctions.py  test_hermite.py  test_hermite_complexity.py  test_hermite_functional.py  test_hermnumpy.py  test_multipoly.py  test_polyfunctions.py  test_polynumpy.py  test_sparse.py  test_standard.py  test_standard_complexity.py
