[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "poly"
version = "1.0"
description = "A Python package for polynomials."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name="Sebastian Gössl", email="goessl@student.tugraz.at"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "vector @ git+https://github.com/goessl/vector.git",
    "sympy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/goessl/poly"
Documentation = "https://goessl.github.io/poly"
Repository = "https://github.com/goessl/poly.git"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["poly"]
include = ["LICENSE", "README.md"]

[tool.hatch.build.targets.sdist]
include = ["poly", "tests",
    "mkdocs.yml", "docs",
    "pyproject.toml", "README.md", "LICENSE"]
